# pytrans

./: .gitignore  .gitlab-ci.yml  .python-version  .readthedocs.yml  AbstractTrap.py  CHANGELOG.md  CITATION.cff  ETH3dTrap.py  HOA2Trap.py  LICENSE  MANIFEST.in  README.md  TODO.md  __init__.py  death_output_calibration.py  example_death_cal.csv  global_settings.py.example  loading_utils.py  mkdocs.yml  py_static_wavegen_test.py  py_transport_wavegen_test.py  pylintrc  pyproject.toml  pytrans.py  reorder.py  requirements.txt  setup.cfg  setup.py  splitting.py  test.py  transport_utils.py
.github/workflows/: publish.yaml  publish.yml  test.yaml  test.yml
cryo_dwl/: README.md  _calculate_voltage.py  analyse.py  calculate_voltage.py  dwl_split.py  plot_ps.py  vbasis_x0.npy
demonstration_scripts/: static_ETH3d_solver1.py  static_ETH3d_solver1vs2.py  static_HOA2_solver2.py  transport_ETH3d_plots.py  transport_ETH3d_solver1.py  transport_ETH3d_solver2voffsetrelex.py
docs/: index.md  installation.md
docs/api/: objectives.md
docs/howto/: build_trap_model_comsol.md
examples/: cryo_transport.py  test_trap.ipynb
experiments/: load_and_profile.py  load_and_split.py  load_and_split_2Be.py  load_and_split_2Be1Ca.py  load_and_split_2Be2Ca.py  loading_Ca_2016_07.py  loading_conveyor.py  loading_conveyor_2Be1Ca.py  loading_conveyor_2Be2Ca.py  readme.txt  reorder.py  splitting_2Be_2016_10.py  splitting_test.py  static_potential_offset_test.py
experiments/static_potential_offset_test/: analysis_160605.py  static_potential_offset_test.py
lib/: json_loader.py
moments_data/cryo/: NOTES.md  plot_moments.ipynb  plot_xaxis.py
moments_file/: DanielTrapMomentsTransport.mat  HOA2.pickle.REMOVED.git-id  trap_exp_explanation.txt  vtk_to_pickle.py
moments_file/cryo/: NOTES.md  plot_xaxis.py
moments_file/segtrap/: NOTES.md  plot_xaxis.py
new_tests/: test_static_segtrap_solver1.py
notebooks/: various_tests.ipynb
old_tests/: load_and_split_animation_test.py  loading_conveyor_radials_test.py  radial_field_test.py  radial_solver_test.py  static_potential_offset_test.py  waveform_interpolation_test.py
pytrans/: __init__.py  __version__.py  _objectives.py  _solver.py  abstract_model.py  abstract_model_electrodes.py  constants.py  conversion.py  electrode.py  filter.py  functions.py  global_settings.py  indexing.py  ions.py  master_pytrans.py  objectives.py  potential_well.py  potentials.py  pytrans.py  pytrans_bak.py  sampling.py  solver.py  timer.py  typing.py  units.py  waveform.py  waveform_solver.py
pytrans/analysis/: __init__.py  _old_analysis.py  analysis.py  analysis2.py  analysis_results.py  analytic_traps.py  coulomb.py  mode_solver.py  results.py  roi.py  simulate.py  simulate1d.py
pytrans/plotting/: __init__.py  _old_plotting.py  animate.py  plotting.py  pytrans.mplstyle  roi.py
pytrans/transform/: __init__.py  filter.py
pytrans/trap_model/: abstract_trap.py  cryo.py  segtrap.py
pytrans/utils/: analysis_utils.py  cryo_analysis.py  cryo_plotting.py  cryo_solver.py  indexing.py  linspace_functions.py  reorder.py  timer.py
scratch/: _potential_well.py  calculate_voltage.py  py_static_wavegen_test.py  py_transport_wavegen_test.py
scratch/_pytrans/: _solver.py
scratch/analysis/: analyse_good_2Be1Ca_waveformset.py
scratch/demonstration_scripts/: all_pictures.sh  static_ETH3d_solver2.py  transport_ETH3d_plots.py  transport_ETH3d_solver1.py  transport_ETH3d_solver2vs1.py
scratch/experiments/: loading_Ca_2016_07.py  static_well_demo2.py  trans_single.py
scratch/old_tests/: death_wavsize_test.py  initial_voltage_test.py  split_coulomb_test.py  (+2 more)
scripts/: test_cryo.py  test_static_segtrap_solver1.py
tests/: _test_waveform.py  initial_voltage_test.py  linspace_fn_test.org  load_and_split_animation_test.py  loading_conveyor_radials_test.py  loading_conveyor_test.py  plotting_test.py  radial_field_test.py  radial_freq_test.py  radial_solver_test.py  solver_numeric_test.py  solver_test.py  split_coulomb_test.py  split_d_test.py  splitting_constraints_test.py  splitting_optimizer_test.org  splitting_reparam_test.org  splitting_test.py  start_end_inconsistency_correction.py  static_potential_offset_test.py  test.py  test_cryo_model.py  test_import.py  test_model.py  test_plot.py  test_potential_well.py  test_solver.py  test_transport.py  test_trap_model.py  trap.py  video_test.org  waveform_interpolation_test.py
(+49 files in other folders)
