[project]
name = "pytrans"
version = "2.1.0"
authors = [
  { name = "Carmelo Mordini", email = "carmelo.mordini@gmail.com" },
]
description = "Generation of potentials and waveforms for trapped ions"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["python", "trapped ions", "waveforms", "ion transport", "quantum computing"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

requires-python = ">=3.10"
dependencies = [
  "numpy",
  "scipy",
  "nptyping",
  "cvxpy",
  "tqdm",
  "matplotlib",
  "colorama",
  "tabulate"
]

[project.optional-dependencies]
mosek = [
  "mosek"
]
dev = [
    "pytest",
    "pytest-cov",
    "autopep8",
    "black"
]
docs = [
  "mkdocs",
  "mkdocs-include-markdown-plugin",
  "mkdocstrings"
]

[project.urls]
Homepage = "https://github.com/tiqi-group/pytrans"
Documentation = "https://pytrans.readthedocs.io"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
