[metadata]
name = pytrans
version = 2.0.0
author = ['Carmelo Mordini']
author_email = cmordini@phys.ethz.ch
license = MIT
description = Transport waveform-related generation and analysis utilities
url = https://gitlab.phys.ethz.ch/tiqi-projects/pytrans2.git
long_description = file: README.txt
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent

[options]
packages=find:
install_requires =
    numpy
    scipy
    cvxpy
    mosek
    tqdm
    matplotlib
    pyqt5
    colorama

[options.packages.find]
exclude = 'tests'
